# bindcraft

./: INTEGRATION_GUIDE.md  README.md  pyproject.toml  pytest.ini
examples/: example_workflow.py
src/bindcraft/: run_bindcraft.py  run_bindcraft_agent.py  run_bindcraft_agent_llm.py
src/bindcraft.egg-info/: PKG-INFO  SOURCES.txt
src/bindcraft/analysis/: __init__.py  energy.py
src/bindcraft/core/: .main.py.swp  __init__.py  agentic.py  agentic_llm.py  bindcraft.py  folding.py  inverse_folding.py  main.py
src/bindcraft/util/: __init__.py  quality_control.py
tests/: run_tests.sh  test_bindcraft.py  test_energy.py  test_folding.py  test_quality.py  test_summary.md  testing.md
